# wp3-d-quest

./: .copier-answers.yml  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE-MIT.md  README.qmd  TODO.md  _metadata.yml  _publish.yml  _quarto.yml  justfile  pyproject.toml
.config/: cliff.toml
.github/: CODEOWNERS
.github/workflows/: add-to-project.yml  build-website.yml  checks.yml  release.yml
